--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
           <h1 class="title is-1 publication-title">Distilling 3D distinctive local descriptors for 6D pose estimation</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a href="https://keunhong.com">Amir Hamza</a><sup>1,2</sup>,</span>
+              <a href="https://scholar.google.com/citations?user=GYZWQrAAAAAJ&hl=en&authuser=1">Amir Hamza</a><sup>1,2</sup>,</span>
             <span class="author-block">
-              <a href="https://utkarshsinha.com">Andrea Caraffa</a><sup>1</sup>,</span>
+              <a href="https://scholar.google.com/citations?user=ARB9u4cAAAAJ&hl=en&authuser=1">Andrea Caraffa</a><sup>1</sup>,</span>
             <span class="author-block">
-              <a href="https://jonbarron.info">Davide Boscaini</a><sup>1</sup>,
+              <a href="https://davideboscaini.github.io/">Davide Boscaini</a><sup>1</sup>,
             </span>
             <span class="author-block">
-              <a href="https://homes.cs.washington.edu/~seitz/">Fabio Poiesi</a><sup>1</sup>,
+              <a href="https://fabiopoiesi.github.io/">Fabio Poiesi</a><sup>1</sup>,
             </span>
           </div>
 
