--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         content="Deformable Neural Radiance Fields creates free-viewpoint portraits (nerfies) from casually captured videos.">
   <meta name="keywords" content="Nerfies, D-NeRF, NeRF">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>dGeDi: Distilling 3D disctinctive local descriptors for 6D pose estimation</title>
+  <title>⚗️ Distilling 3D disctinctive local descriptors for 6D pose estimation</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-PYVRSFMDRL"></script>
@@ -57,7 +57,7 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">Distilling 3D distinctive local descriptors for 6D pose estimation</h1>
+          <h1 class="title is-1 publication-title">⚗️ Distilling 3D distinctive local descriptors for 6D pose estimation</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a href="https://scholar.google.com/citations?user=GYZWQrAAAAAJ&hl=en&authuser=1">Amir Hamza</a><sup>1,2</sup>,</span>
