--- a/index.html
+++ b/index.html
@@ -248,10 +248,10 @@
   <div class="container">
     <div class="content has-text-centered">
       <a class="icon-link"
-         href="./static/videos/nerfies_paper.pdf">
+         href="./static/videos/IROS25_dGeDi.pdf">
         <i class="fas fa-file-pdf"></i>
       </a>
-      <a class="icon-link" href="https://github.com/ahamza848/dGeDi" class="external-link" disabled>
+      <a class="icon-link" href="https://github.com/tev-fbk/dGeDi/" class="external-link" disabled>
         <i class="fab fa-github"></i>
       </a>
     </div>
