--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         content="Distilling 3D distinctive local descriptors for 6D pose estimation">
   <meta name="keywords" content="dGeDi, Distilled Gedi">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title> Distilling 3D disctinctive local descriptors for 6D pose estimation</title>
+  <title> Distilling 3D distinctive local descriptors for 6D pose estimation</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
  
