--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
     <pre><code>@article{hamza2025distilling3ddistinctivelocal,
   author    = {Hamza, Amir and Caraffa, Andrea and Boscaini, Davide and Poiesi, Fabio},
   title     = {Distilling 3D disctinctive local descriptors for 6D pose estimation},
-  journal   = {arXiv},
+  journal   = {IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},
   year      = {2025},
 }</code></pre>
   </div>
