--- a/index.html
+++ b/index.html
@@ -78,6 +78,11 @@
             <span class="author-block"><sup></sup>{ahamza, dboscaini, acaraffa, poiesi}@fbk.eu </span>
           </div>
 
+            <div class="has-text-centered" style="font-size: 1.2rem; font-weight: bold;">
+            <p>2025 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)</p>
+          </div>
+          
+
           <div class="column has-text-centered">
             <div class="publication-links">
               <span class="link-block">
